--- a/app/style/globals.css
+++ b/app/style/globals.css
@@ -3,6 +3,49 @@
 @tailwind utilities;
 
 /* ! them color */
+
+@layer base {
+  @font-face {
+    font-display: swap;
+    font-family: "Void";
+    font-style: normal;
+    font-weight: 300;
+    src: url("/fonts/VoidLight.woff2") format("woff2");
+  }
+
+  @font-face {
+    font-display: swap;
+    font-family: "Void";
+    font-style: normal;
+    font-weight: 400;
+    src: url("/fonts/VoidRegular.woff2") format("woff2");
+  }
+
+  @font-face {
+    font-display: swap;
+    font-family: "Void";
+    font-style: normal;
+    font-weight: 500;
+    src: url("/fonts/VoidMedium.woff2") format("woff2");
+  }
+
+  @font-face {
+    font-display: swap;
+    font-family: "Void";
+    font-style: normal;
+    font-weight: 600;
+    src: url("/fonts/VoidSemiBold.woff2") format("woff2");
+  }
+
+  @font-face {
+    font-display: swap;
+    font-family: "Void";
+    font-style: normal;
+    font-weight: 700;
+    src: url("/fonts/VoidBold.woff2") format("woff2");
+  }
+}
+
 .theme {
   color: #04c3fd;
   color: #263852;
