--- a/app/style/globals.css
+++ b/app/style/globals.css
@@ -7,43 +7,51 @@
 @layer base {
   @font-face {
     font-display: swap;
+    font-family: "Wix Madefor Display";
+    font-style: normal;
+    font-weight: 400;
+    src: url("/fonts/wix-madefor-display-v10-latin-regular.woff2")
+      format("woff2");
+  }
+  @font-face {
+    font-display: swap;
+    font-family: "Wix Madefor Display";
+    font-style: normal;
+    font-weight: 500;
+    src: url("/fonts/wix-madefor-display-v10-latin-500.woff2") format("woff2");
+  }
+
+  @font-face {
+    font-display: swap;
+    font-family: "Wix Madefor Display";
+    font-style: normal;
+    font-weight: 600;
+    src: url("/fonts/wix-madefor-display-v10-latin-600.woff2") format("woff2");
+  }
+
+  @font-face {
+    font-display: swap;
+    font-family: "Wix Madefor Display";
+    font-style: normal;
+    font-weight: 700;
+    src: url("/fonts/wix-madefor-display-v10-latin-700.woff2") format("woff2");
+  }
+
+  @font-face {
+    font-display: swap;
+    font-family: "Wix Madefor Display";
+    font-style: normal;
+    font-weight: 800;
+    src: url("/fonts/wix-madefor-display-v10-latin-800.woff2") format("woff2");
+  }
+
+  /* @font-face {
+    font-display: swap;
     font-family: "Void";
     font-style: normal;
     font-weight: 300;
     src: url("/fonts/VoidLight.woff2") format("woff2");
-  }
-
-  @font-face {
-    font-display: swap;
-    font-family: "Void";
-    font-style: normal;
-    font-weight: 400;
-    src: url("/fonts/VoidRegular.woff2") format("woff2");
-  }
-
-  @font-face {
-    font-display: swap;
-    font-family: "Void";
-    font-style: normal;
-    font-weight: 500;
-    src: url("/fonts/VoidMedium.woff2") format("woff2");
-  }
-
-  @font-face {
-    font-display: swap;
-    font-family: "Void";
-    font-style: normal;
-    font-weight: 600;
-    src: url("/fonts/VoidSemiBold.woff2") format("woff2");
-  }
-
-  @font-face {
-    font-display: swap;
-    font-family: "Void";
-    font-style: normal;
-    font-weight: 700;
-    src: url("/fonts/VoidBold.woff2") format("woff2");
-  }
+  } */
 }
 
 .theme {
@@ -78,7 +86,14 @@ body {
 }
 
 .bg-header {
-  background: linear-gradient(90deg,#3f8ea5, #5fb5cf,  white, #5fb5cf, #3f8ea5) !important;
+  background: linear-gradient(
+    90deg,
+    #3f8ea5,
+    #5fb5cf,
+    white,
+    #5fb5cf,
+    #3f8ea5
+  ) !important;
   color: white; /* Text color on the gradient background */
 }
 
@@ -92,15 +107,22 @@ body {
   position: relative;
 }
 
-.hero-text {
-  text-align: center;
+.hero-image::before {
+  content: "";
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color: white;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: inherit;
+  filter: blur(20px);
+}
+
+.hero-text {
+  position: relative;
+  z-index: 1; /* Ensure the text is on top of the blurred background */
 }
 .hover-box:hover {
   --tw-shadow-color: #04c3fd;
-    --tw-shadow: var(--tw-shadow-colored);
+  --tw-shadow: var(--tw-shadow-colored);
 }
